# azurevm-storage-token

./: Cargo.toml  Makefile.toml  README.md
.github/workflows/: build.yml
azurevm-storage-token/: Cargo.toml
azurevm-storage-token/src/: error.rs  main.rs
azurevm-storage-token/src/azure/: auth.rs  mod.rs  storage.rs
