[workspace]
members = ["azurevm-storage-token"]
resolver = "2"

package.authors = ["Tim Small"]
package.homepage = "https://github.com/Smalls1652/azurevm-storage-token"
package.repository = "https://github.com/Smalls1652/azurevm-storage-token"
package.license = "MIT"
package.edition = "2024"

[profile.release]
opt-level = "s"
lto = true

[workspace.dependencies]
base64 = { version = "0.22.1" }
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.34", features = ["derive"] }
clap_builder = { version = "4.5.34" }
hmac = { version = "0.13.0-pre.5" }
percent-encoding = { version = "2.3.1" }
quick-xml = { version = "0.37.3", features = ["serde", "serde-types", "serialize"] }
reqwest = { version = "0.12.15", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
sha2 = { version = "0.11.0-pre.5" }
thiserror = { version = "2.0.12" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[workspace.metadata.cargo-machete]
ignored = ["serde_json"]
