[package]
name = "azurevm-storage-token"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap_builder = { workspace = true }
hmac = { workspace = true }
percent-encoding = { workspace = true }
quick-xml = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
